  
  * control(libboost1.40-dev): Move libboost-python1.40-dev from Depends
    to Suggests; this is possible now that -dev contains all the header
    files.  Closes: #548503, #549935.
  
  * patches/boost-build-pythonid.patch: New (thanks, Gaudenz
    Steinlin).  Add --pythonid parameter to the build system to only add
    an identification to Python libraries.

  * control:
  * rules: Build libboost-mpi-python1.40.0 and
    libboost-mpi-python1.40-dev.  Thanks again to Gaudenz Steinlin.
    Closes: #552014.

 -- Steve M. Robbins <smr@debian.org>  Sat, 14 Nov 2009 12:52:42 -0600

boost1.40 (1.40.0-2) unstable; urgency=low

  * rules:
  * control: New package libboost-graph-parallel (thanks, Mathieu
    Malaterre).  Closes: #549203.

  * [Merge from 1.39.0-5] rules: Rule $(bjam) needs to depend on
    $(QUILT_STAMPFN) because patches/bootstrap.patch modifies script
    bootstrap.sh, used to build $(bjam).  Thanks to Andreas Ferber for the
    report and astute analysis.  Closes: #545535.  Put the "-mt"
    decoration before the final suffix for compatibility symlinks.
    Closes: #545773.

  * [Merge from 1.39.0-6] patches/boost-test-invalid-read.patch: New.  Fix
    invalid read error detected by valgrind.  Closes: #538946.
  
  * rules: Create "-mt" compatibility links for static libs.  Closes:
    #549467.
  
  * control(libboost1.40-dev): Move libboost-python1.40-dev from Suggests
    to Depends.  Workaround for #548503.
  
  * control(libboost1.40-all-dev): Add ${misc:Depends}.

 -- Steve M. Robbins <smr@debian.org>  Sun, 04 Oct 2009 07:53:01 -0500

boost1.40 (1.40.0-1) unstable; urgency=low

  * New upstream.  Version string updates to control & rules.  File list
    updates to example-files & documentation-files.
    - patches/python-enum-same-value.patch:
    - patches/python-generic-call.patch:
    - patches/bootstrap.patch:
    - patches/mpi-python.patch:
    - patches/boost_python_translate_exception.patch:
    - patches/wave-cpp.patch: