@@ -1,0 +1,12 @@
+#! /bin/sh
+
+set -e
+
+update=/usr/share/python/runtime.d/libboost-mpi-python@PKGVERSION@-dev.rtupdate
+
+if which pyversions >/dev/null; then
+    $update rtupdate none $(pyversions -d)
+fi
+
+#DEBHELPER#
+
