@@ -1,0 +1,10 @@
+#! /bin/sh
+
+set -e
+
+update=/usr/share/python/runtime.d/libboost-mpi-python@PKGVERSION@-dev.rtupdate
+
+$update remove
+
+#DEBHELPER#
+
