@@ -14,9 +14,11 @@ update_linklibs() {
     suf=$2
 
     cd /usr/lib
-    target=libboost_python-${py}.${suf}
-    link=libboost_python.${suf} 
-    test -e $target && ln -s -f $target $link
+    for base in libboost_python libboost_mpi_python; do
+	target=${base}-${py}.${suf}
+	link=${base}.${suf} 
+	test -e $target && ln -s -f $target $link
+    done
 }
 
 remove_linklibs() {
@@ -24,7 +26,8 @@ remove_linklibs() {
 
     cd /usr/lib
     for thread in "" -mt; do
-	rm -f libboost_python${thread}.${suf} 
+	rm -f libboost_python${thread}.${suf}
+	rm -f libboost_mpi_python${thread}.${suf}
     done
 }
 
