@@ -221,12 +221,14 @@ install: build clean-debhelper $(filtered_files)
 	@$(call cp_debhelper,libboost-dev,libboost$(PKGVERSION)-dev)
 	@$(call cp_debhelper,libboost-doc,libboost$(PKGVERSION)-doc)
 	@$(call cp_debhelper,libboost-python-dev,libboost-python$(PKGVERSION)-dev)
+	@$(call cp_debhelper,libboost-mpi-python-dev,libboost-mpi-python$(PKGVERSION)-dev)
 
 	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --without-python                        
 	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --with-python --with-mpi --pythonid=py24 python=2.4 
 	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --with-python --with-mpi --pythonid=py25 python=2.5 
 
 	install --mode=755 -D debian/rtupdate debian/tmp/usr/share/python/runtime.d/libboost-python$(PKGVERSION)-dev.rtupdate
+	install --mode=755 -D debian/rtupdate debian/tmp/usr/share/python/runtime.d/libboost-mpi-python$(PKGVERSION)-dev.rtupdate
 
 	find debian/tmp/usr/include -type f | xargs chmod 644
 	find debian/tmp -name .cvsignore | xargs rm -f
@@ -318,6 +320,8 @@ install: build clean-debhelper $(filtered_files)
 	cp stage/lib/mpi-py24.so debian/libboost-mpi-python$(SOVERSION)/usr/lib/python2.4/site-packages/boost/mpi.so
 	cp stage/lib/mpi-py25.so debian/libboost-mpi-python$(SOVERSION)/usr/lib/python2.5/site-packages/boost/mpi.so
 	# package libboost-mpi-python$(PKGVERSION)-dev
+	dh_install -plibboost-python$(PKGVERSION)-dev --autodest \
+	   debian/tmp/usr/share/python/runtime.d/libboost-mpi-python$(PKGVERSION)-dev.rtupdate
 	dh_install -plibboost-mpi-python$(PKGVERSION)-dev
 	dh_link -plibboost-mpi$(PKGVERSION)-dev
 
